# titan-v

./: .ignore  Cargo.toml  README.md  run-with-logging.nu  run.nu  rustfmt.toml
.helix/: languages.toml
titan/: Cargo.toml
titan-assets/: Cargo.toml
titan-assets/src/: assets.rs  lib.rs
titan-cli/: Cargo.toml
titan-cli/src/: main.rs
titan-cli/template/app/: app_bin_template.txt  app_build_template.rs  app_cargo_template.toml  app_lib_template.rs
titan-cli/template/helix/: helix_.ignore_template  helix_languages_template.toml
titan-cli/template/lsp/: lsp_template.rs
titan-cli/template/scripting/: highlights.scm
titan-core/: Cargo.toml
titan-core/src/: arclock.rs  channels.rs  chrono.rs  lib.rs  subsystem.rs  tasks.rs
titan-lsp/: Cargo.toml  build.rs
titan-lsp/src/: main.rs
titan-macro/: Cargo.toml
titan-macro/src/: lib.rs
titan-viewer/: Cargo.toml  lib.rs
titan-viewer/content/: test_script.adastra
titan-viewer/src/: lib.rs  main.rs
titan/src/: channels.rs  engine.rs  graphics.rs  lib.rs  terminal.rs
