[package]
name = "titan_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
futures = "0.3.30"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
nanoid = "0.4.0"
orx-concurrent-vec = "3.0.1"
orx-concurrent-option = "1.3.0"
dashmap = "5.1.0"
indexmap = "2.6.0"
tokio-console = "0.1.12"
console-subscriber = "0.4.0"
toml = "0.8.19"
ad-astra = "1.0.0"
log = "0.4.22"

[dependencies.tokio]
version = "1.40.0"
features = ["rt-multi-thread", "macros", "sync", "time"]

[dependencies.titan-macro]
path = "../titan-macro"
