[package]
name = "titan_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
async-trait = "0.1.83"
futures = "0.3.30"
tracing = "0.1.40"
nanoid = "0.4.0"
dashmap = "6.1.0"
indexmap = "2.6.0"
toml = "0.8.19"
log = "0.4.22"

[dependencies.tokio]
version = "1.40.0"
features = ["rt-multi-thread", "macros", "sync", "time"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.titan-macro]
path = "../titan-macro"
