[package]
name = "titan"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.titan_core]
path = "../titan-core"

[dependencies.titan_assets]
path = "../titan-assets"

[dependencies.ratatui]
version = "0.29.0"

[dependencies.tui-logger]
version = "0.14.1"
features = ["tracing-support"]

[dependencies.wgpu]
version = "23.0.1"
